--- a/main.css
+++ b/main.css
@@ -31,7 +31,10 @@ body {
 }
 
 .box {
-  display: block;
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
 
   width: 50px;
   height: 50px;
@@ -39,7 +42,14 @@ body {
   background: #12a6e0;
   border: 1px solid rgb(0, 0, 0);
 
+  font-size: 1.5rem;
+  font-weight: 700;
+
   transition: all 0.2s ease-in-out;
+}
+
+.box.freeheight {
+  height: auto;
 }
 
 .flex-example {
@@ -76,6 +86,8 @@ body {
 
   top: -50px;
   color: white;
+
+  background: none !important;
 }
 
 /* a border for the renderable area (i.e a box of the area inside the padding) */
@@ -101,7 +113,7 @@ body {
   border-radius: 5px;
 
   height: 100% !important;
-  width: 400px !important;
+  width: 500px !important;
 }
 
 #table-of-contents {
