--- a/main.css
+++ b/main.css
@@ -72,6 +72,7 @@ body {
 
   padding: 30px;
   width: 500px;
+  min-height: 200px;
 
   position: relative;
 
@@ -102,6 +103,14 @@ body {
   grid-area: description;
 
   color: white;
+}
+
+.description code {
+  background: #1a1a1a;
+  color: #ff5100;
+
+  padding: 3px 5px;
+  border-radius: 5px;
 }
 
 /* a border for the renderable area (i.e a box of the area inside the padding) */
